Replaced Sun encoder with Apache